# legal-scraper-pipeline

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  scrapy.cfg  wipe_range.py
legal_scraper/: config.py  items.py  logging_config.py  orchestration.py  partitions.py  pipelines.py  settings.py  transform.py
legal_scraper/spiders/: decisions.py
legal_scraper/storage/: minio_store.py  mongo.py
tests/: test_live_scrape.py  test_partitions.py  test_spider_helpers.py  test_transform.py
